--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.5",
     "@mui/x-charts": "^6.0.0-alpha.7",
+    "@mui/x-data-grid": "^6.11.1",
+    "@mui/x-data-grid-generator": "^6.11.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
